# Diffrax-for-Information-Asymmetries

./: README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: data.md  evaluation.md  infrastructure.md  modeling.md  research.md  visualization.md
finax/: __init__.py
finax/app/: __init__.py  blueprint.py  site.py
finax/data/: __init__.py  advanced_import.py  cleaning.py  eikon.py  features.py  ingestion.py  ohlc.py
finax/evaluation/: __init__.py  metrics.py  tests.py  time_series.py
finax/infrastructure/: __init__.py  config.py  devices.py
finax/modeling/: __init__.py  finance.py  financial_processes.py  flax_finance.py  flax_integration.py  haiku_integration.py  hf_integration.py  highdim_simulation.py  neural_cde.py  neural_jump_sde.py  neural_ode.py  neural_sde.py  nsde.py  sandbox.py  simulation.py  stochastic.py  tf_integration.py  torch_integration.py  training.py
finax/nlp/: __init__.py  text.py
finax/research/: __init__.py  asymmetry.py
finax/utils/: __init__.py  logging.py
finax/visualization/: __init__.py  plots.py
tests/: conftest.py  test_advanced_capabilities.py  test_data_ingestion.py  test_data_loaders.py  test_data_utils.py  test_features.py  test_ingestion.py  test_neural_diffeqs.py  test_nsde_finance.py  test_training.py
